Actualizacion del cors